--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
     <meta name="Description" content="Happy Birthday My Friend" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Please Be Happy Bungaa</title>
+    <title>Please Be Happy Sayanggku NOVII</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -105,7 +105,7 @@
                     <div class="modal-body">
                         <p id="tekss">
                         </p>
-                        <br><br> ~ PakForlay A.k.A GygDoggy A.K.A Aldo D. Pratama.
+                        <br><br> ~ DARI MAS ANJASS GANTENG 😝
                     </div>
                     <audio id="lagu" src="assets/lagu/lagu.mp3" preload="auto">
 </audio>
